@@ -1,4 +1,4 @@
-*** ANNOUNCE: SWIG 2.0.1 (in progress) ***
+*** ANNOUNCE: SWIG 2.0.1 (4 October 2010) ***
 
 http://www.swig.org
 
